fix overflowX

--- a/css/scroll_images.css
+++ b/css/scroll_images.css
@@ -7,6 +7,7 @@
 }
 .container-scroll {
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 .container-scroll::-webkit-scrollbar {
     display: none;
